--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -2,13 +2,18 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+<section class="w-full lg:max-w-6xl mx-auto py-16 px-8 md:px-16 flex flex-col gap-8 flex-1">
+    <h2 class="text-3xl uppercase font-mono font-extrabold text-black">Register</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
+        <ul class="errorlist">
+            <li>{{ message }}</li>
+        </ul>
+        
+    {% endif %}
+    
+    <form class="customform" action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
@@ -22,9 +27,9 @@
         <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <input class="bg-cyan-900 border-cyan-600 text-white uppercase font-bold px-8 py-2 transition-all hover:bg-teal-800 hover:text-lime-200 border-2 rounded-xl shadow-md" class="btn btn-primary" type="submit" value="Register">
     </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    <p>Already have an account? <a class="font-bold uppercase" href="{% url 'login' %}">Log In here.</a></p>
+</section>
 
 {% endblock %}
