--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -46,7 +46,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary submit-button"/>
+            <input type="submit" value="Send Email" class="btn btn-primary submit-button"/>
         </form>
     </div>
 {% endblock %}
